<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contrast Shower Timer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cold">COLD</string>
    <string name="hot">HOT</string>
    <string name="get_ready">GET READY</string>
    <string name="how_many_cycles">How Many Cycles?</string>
    <string name="how_long">How Long is Each Cycle?</string>
    <string name="start">START</string>
    <string name="start_cycle">Start Cycle</string><string name="end_cycle">End Cycle</string><string name="repeat">Repeat Timer</string><string name="new_timer">New Timer</string>
    
    <string name="min">min</string>
    <string name="sec">sec</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="finished"> FINISHED </string>

</resources>
